починил user_grid

--- a/app/javascript/packs/_users_grid.scss
+++ b/app/javascript/packs/_users_grid.scss
@@ -1,4 +1,19 @@
 .usersGrid {
+	position: relative;
+	max-width: 1400px;
+	margin: 0 auto;
+	padding-top: 84%;
+	font-size: 0;
+	line-height: 0;
+	vertical-align: top;
+
+	@media (max-width: 768px) {
+		display: none;
+	}
+	@media (min-width: 1400px) {
+		padding-top: 1176px;
+	}
+
 	&:before,
 	&:after {
 		content: " "; // 1
@@ -7,67 +22,83 @@
 	&:after {
 		clear: both;
 	}
-	max-width: 1400px;
-	margin: 0 auto;
-	font-size: 0;
-	line-height: 0;
-	vertical-align: top;
-
-	@media (max-width: 768px) {
-		display: none;
-	}
 }
 
 .usersGrid-photo {
-	position: relative;
-	float: left;
+	position: absolute;
 	display: block;
-	width: 100px;
-	height: 100px;
 	vertical-align: top;
 	background-position: center center;
 	background-size: cover;
 
 	&:nth-child(1) {
+		left: 0;
+		top: 0;
 		width: 37%;
 		padding-top: 42%;
 	}
 	&:nth-child(2) {
+		left: 37%;
+		top: 0;
 		width: 34%;
 		padding-top: 22%;
 	}
 	&:nth-child(3) {
+		right: 0;
+		top: 0;
 		width: 29%;
 		padding-top: 22%;
 	}
 	&:nth-child(4) {
+		left: 37%;
+		top: 0;
+		margin-top: 22%;
 		width: 29%;
 		padding-top: 20%;
 	}
 	&:nth-child(5) {
+		right: 0;
+		top: 0;
+		margin-top: 22%;
 		width: 34%;
 		padding-top: 20%;
 	}
 	&:nth-child(6) {
+		left: 0;
+		top: 0;
+		margin-top: 42%;
 		width: 34%;
 		padding-top: 20%;
 	}
 	&:nth-child(7) {
+		left: 34%;
+		top: 0;
+		margin-top: 42%;
 		width: 29%;
 		padding-top: 20%;
 	}
 	&:nth-child(8) {
-		float: right;
+		right: 0;
+		top: 0;
+		margin-top: 42%;
 		width: 37%;
 		padding-top: 42%;
 	}
 	&:nth-child(9) {
+		left: 0;
+		bottom: 0;
 		width: 29%;
 		padding-top: 22%;
 	}
 	&:nth-child(10) {
+		left: 29%;
+		bottom: 0;
 		width: 34%;
 		padding-top: 22%;
+	}
+
+	@media (max-width: 768px) {
+		position: relative;
 	}
 }
 
