--- a/app/views/header/_nav_links_for_auth.html.erb
+++ b/app/views/header/_nav_links_for_auth.html.erb
@@ -8,7 +8,7 @@
     <%= link_to "ПАРТНЕРЫ", '#partners' %>
   </li>
   <li class="<%= request.fullpath === general_partner_path && 'active' %>">
-    <%= link_to "Ген. парнтер", general_partner_path %>
+    <%= link_to "Aldemar", general_partner_path %>
   </li>
   <li>
     <%= link_to "Правила участия", '#about', data: {toggle: "modal", target: "#myModal1"} %>
