--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,20 +2,20 @@
   Я участвую в конкурсе красоты Мисс Туризм 2018!
 <%- end %>
 <%- content_for :description do %>
-  Голосуйте за меня!
+  Голосуйте за меня с 31 июля по 4 сентября!
 <%- end %>
 
 <% if user_signed_in? && policy(@user).edit? %>
   <%= render partial: "shared/meta_og",
              locals:  {title: "Я участвую в конкурсе красоты Мисс Туризм 2017!",
-                       desc:  "Голосуйте за меня!",
+                       desc:  "Голосуйте за меня с 31 июля по 4 сентября!",
                        photo: @root_photo ? @root_photo.photo_src.large : nil
              }
   %>
 <%- else %>
   <%= render partial: "shared/meta_og",
              locals:  {title: "Посмотрите какая девушка!",
-                       desc:  "#{@user.name} участвует в конкурсе красоты Мисс Туризм 2018! Проголосуйте за нее!",
+                       desc:  "#{@user.name} участвует в конкурсе красоты Мисс Туризм 2018! Проголосуйте за нее с 31 июля по 4 сентября!",
                        photo: @root_photo ? @root_photo.photo_src.large : nil
              }
   %>
