улучшил загрузку фотографий и заменил лого

--- a/app/javascript/packs/app-styles.scss
+++ b/app/javascript/packs/app-styles.scss
@@ -20,6 +20,7 @@
 @import 'lightgallery/lightgallery/dist/css/lg-transitions';
 @import 'users_grid';
 @import 'about';
+@import 'fileapi';
 
 .alert {
 	margin: 15px 0;
