--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,7 @@
 
 <div class="profile-container">
   <div class="profile-photos-col">
-    <%== render 'users/photos' %>
+    <%== render 'users/photos_col' %>
   </div>
   <div class="profile-info-col">
 
