--- a/app/javascript/packs/_profile.scss
+++ b/app/javascript/packs/_profile.scss
@@ -155,6 +155,15 @@
 		width: 100%;
 	}
 
+	img {
+		border-radius: 1px;
+	}
+}
+
+.profile-gallery-item{
+	position: relative;
+	cursor: pointer;
+
 	&:hover {
 		.profile-photos-zoom {
 			display: block;
@@ -176,11 +185,9 @@
 		right: 0;
 		background-color: rgba(0, 0, 0, .25);
 		transition: all 200ms ease-in-out;
+		cursor: pointer;
 	}
 
-	img {
-		border-radius: 1px;
-	}
 }
 
 .profile-photo-root-info {
@@ -260,7 +267,7 @@
 	position: absolute;
 	right: 6px;
 	top: 6px;
-	z-index: 2000;
+	z-index: 10;
 	display: flex;
 	justify-content: flex-end;
 
