--- a/app/views/users/_photos.erb
+++ b/app/views/users/_photos.erb
@@ -1,22 +1,31 @@
-<div class="profile-photos" id="profile-gallery">
+<div class="profile-photos">
 
   <%- if @root_photo.present? %>
-    <div class="profile-photo-root profile-gallery-item" data-src="<%= @root_photo.photo_src %>" data-sub-html=".caption">
+    <div class="profile-photo-root">
 
-      <i class="fa fa-search fa-2x profile-photos-zoom"></i>
+      <div class="profile-gallery-item" data-src="<%= @root_photo.photo_src %>" data-sub-html=".caption">
+        <i class="fa fa-search fa-2x profile-photos-zoom"></i>
 
-      <%= image_tag @root_photo.photo_src.middle, class: "img-responsive" %>
+        <%= image_tag @root_photo.photo_src.middle, class: "img-responsive" %>
+
+        <div class="caption">
+          <h4>
+            <%= @user.name %>
+          </h4>
+        </div>
+      </div>
 
       <% if user_signed_in? && policy(@user).profile? %>
         <div class="profile-photo-actions">
           <%= link_to members_photo_path(@user, @root_photo),
                       method: :delete,
-                      class: 'btn btn-default btn-sm',
-                      title: "Удалить фотографию",
-                      data: {
-                          toggle: "tooltip",
+                      remote: true,
+                      class:  'btn btn-default btn-sm',
+                      title:  "Удалить фотографию",
+                      data:   {
+                          toggle:    "tooltip",
                           placement: "top",
-                          confirm: 'Вы уверенны что хотите удалить эту фотографию?'
+                          confirm:   'Вы уверенны что хотите удалить эту фотографию?'
                       } do %>
             <i class="fa fa-trash-o profile-photo-delete-icon"></i>
           <% end %>
@@ -26,34 +35,36 @@
         </div>
       <% end %>
 
-      <div class="caption">
-        <h4>
-          <%= @user.name %>
-        </h4>
-      </div>
-
     </div>
   <% end %>
 
   <div class="profile-photos-thumb">
     <%- @user.photos.each do |photo| %>
       <%- unless photo.root %>
-        <div class="profile-photo profile-gallery-item" data-src="<%= photo.photo_src.large %>" data-sub-html=".caption">
+        <div class="profile-photo">
 
-          <i class="fa fa-search fa-2x profile-photos-zoom"></i>
+          <div class="profile-gallery-item" data-src="<%= @root_photo.photo_src %>" data-sub-html=".caption">
+            <i class="fa fa-search fa-2x profile-photos-zoom"></i>
 
-          <%= image_tag photo.photo_src.thumb, class: "img-responsive" %>
+            <%= image_tag photo.photo_src.thumb, class: "img-responsive" %>
+
+            <div class="caption">
+              <h4>
+                <%= @user.name %>
+              </h4>
+            </div>
+          </div>
 
           <% if user_signed_in? && policy(@user).profile? %>
             <div class="profile-photo-actions">
               <%= simple_form_for photo,
-                                  :url => members_edit_photo_path(@user, photo),
+                                  :url    => members_edit_photo_path(@user, photo),
                                   :method => :put do |f| %>
                 <%= f.button :button,
                              class: 'btn btn-default btn-xs',
                              title: "Сделать фото главным",
-                             data: {
-                                 toggle: "tooltip",
+                             data:  {
+                                 toggle:    "tooltip",
                                  placement: "top",
                              } do %>
                   <i class="fa fa-check-circle-o profile-photo-btn-root-icon"></i>
@@ -61,34 +72,31 @@
               <% end %>
               <%= link_to members_photo_path(@user, photo),
                           method: :delete,
-                          class: 'btn btn-default btn-xs',
-                          title: "Удалить фотографию",
-                          data: {
-                              toggle: "tooltip",
+                          remote: true,
+                          class:  'btn btn-default btn-xs',
+                          title:  "Удалить фотографию",
+                          data:   {
+                              toggle:    "tooltip",
                               placement: "top",
-                              confirm: 'Вы уверенны что хотите удалить эту фотографию?'
+                              confirm:   'Вы уверенны что хотите удалить эту фотографию?'
                           } do %>
                 <i class="fa fa-trash-o profile-photo-delete-icon"></i>
               <% end %>
             </div>
           <% end %>
-
-          <div class="caption">
-            <h4>
-              <%= @user.name %>
-            </h4>
-          </div>
-
         </div>
       <% end %>
     <% end %>
   </div>
 </div>
 
+
 <% if user_signed_in? && policy(@user).profile? %>
   <% if @user.photos.present? %>
     <div style="margin: 24px 0">
-      Для выбора главного фото профиля кликните на иконку с галочкой
+      Для выбора главного фото профиля
+      <br>
+      кликните на иконку с галочкой
       <span class="btn btn-default btn-xs"><i class="fa fa-check-circle-o profile-photo-btn-root-icon"></i></span>
     </div>
   <% end %>
@@ -96,13 +104,19 @@
 
 <% if user_signed_in? && policy(@user).profile? %>
   <%- if @user.photos.length < 4 %>
-    <h4>Загрузите 4 фотографии</h4>
-    <%= simple_form_for @user, :url => members_upload_path, :method => :post do |f| %>
-      <%= f.file_field :photo_src %>
-      <br>
-      <%= f.button :button, class: "btn btn-success btn-lg" do %>
-        Загрузить
-      <% end %>
-    <% end %>
+    <div id="oooops" style="display: none; margin: 10px; padding: 10px; border: 2px solid #f60; border-radius: 4px;">
+      Увы, ваш браузер не поддерживает html5 и flash,
+      поэтому смотреть тут нечего, а iframe не даёт всей красоты :]
+    </div>
+
+    <div id="buttons-panel" data-url="<%= members_upload_path %>">
+      <div class="btn btn-success btn-lg b-button js-fileapi-wrapper">
+        <div class="b-button__text">
+          <span class="fa fa-photo"></span>
+          Выбрать фото для загрузки
+        </div>
+        <input name="files" class="b-button__input" type="file" accept="image/*" multiple />
+      </div>
+    </div>
   <% end %>
 <% end %>
