--- a/app/views/shared/_jury.html.erb
+++ b/app/views/shared/_jury.html.erb
@@ -52,7 +52,7 @@
         <%= image_tag(asset_pack_path('packs/img/jury/chehova.jpg'), size: "180x180") %>
       </div>
       <div class="jury-item-name">
-        Анфи́са Че́хова
+        Анфиса Чехова
       </div>
       <div class="jury-item-info">
         Российская теле и радиоведущая,
