доработка главной и анкеты

--- a/app/views/shared/_about.slim
+++ b/app/views/shared/_about.slim
@@ -11,7 +11,7 @@ h1.home-title#about
   .about-row-right.about-row-right_1
     .about-text.about-text_3
       p Конкурс «Мисс Туризм» создан специально для тебя! Регистрируйся прямо сейчас и собирай как можно больше лайков в интернет-голосовании – используй шанс стать одной из 29 участниц. Для этого подключи друзей, публикуй вау-новость в своих соцсетях и скрести пальчики
-      p= link_to "Правила участия", '#about', data: {toggle: "modal", target: "#myModal1"}, class: "btn btn-success btn-lg",  style: "width: 300px"
+      p= link_to "Правила участия", '#about', data: {toggle: "modal", target: "#myModal1"}, class: "btn btn-success btn-lg", style: "width: 300px"
       - unless user_signed_in?
         button style="width: 300px" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" Зарегистрироваться
 
@@ -29,9 +29,8 @@ h1.home-title#about
     = image_tag(asset_pack_path('packs/img/PartMilitary_01.jpg'), class: 'img-responsive')
 
 .about-row.about-row_2
-  .about-row-left.about-row-left_2
-    = image_tag(asset_pack_path('packs/img/hotel-01-copy.jpg'), class: 'img-responsive')
-  .about-row-right.about-row-right_2
+  .about-row-right.about-row-left_2
     .about-text.about-text_3
-      p Финал конкурса «Мисс Туризм» пройдёт во второй половине октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5*, построенном в стиле Кносского дворца. Какие испытания ждут финалисток? Пока все детали – под завесой тайны ;-)
-      / .text-4 Финал конкурса «Мисс Туризм» пройдёт с 17 по 21 октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5*, построенном в стиле Кносского дворца. Какие испытания ждут финалисток? Пока все детали – под завесой тайны ;-)
+      p Финал конкурса «Мисс Туризм» пройдёт с 17 по 20 октября  на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5*, построенном в стиле Кносского дворца. Какие испытания ждут финалисток? Пока все детали – под завесой тайны ;-)
+  .about-row-left.about-row-right_2
+    = image_tag(asset_pack_path('packs/img/hotel-01-copy.jpg'), class: 'img-responsive')
