--- a/app/views/shared/_steps.html
+++ b/app/views/shared/_steps.html
@@ -61,7 +61,7 @@
         Финал конкурса
       </div>
       <div class="step-date">
-        вторая половина октября
+        с 17 по 20 октября
       </div>
     </div>
 
