--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,39 +44,39 @@
   </div>
   <div class="profile-info-col">
 
-    <%- if false %>
-      <div class="votes-block">
 
+    <div class="votes-block">
 
-        <div class="votes-block-pager">
-          <%- if @user_prev %>
-            <%== link_to user_path(@user_prev, request.query_parameters), class: 'btn btn-default' do %>
-              <i class="fa fa-chevron-left" aria-hidden="true"></i>
-              <span>Предыдущая</span>
-            <% end %>
-          <% else %>
-            <div></div>
+      <div class="votes-block-pager">
+        <%- if @user_prev %>
+          <%== link_to user_path(@user_prev, request.query_parameters), class: 'btn btn-default' do %>
+            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+            <span>Предыдущая</span>
           <% end %>
+        <% else %>
+          <div></div>
+        <% end %>
 
-          <% if user_signed_in? && !policy(@user).profile? && false %>
-            <% unless VotesQuery.new.is_votes(current_user, @user.number) %>
-              <div class="vote-btn-container text-center">
-                <span class='btn btn-success disabled'>Вы проголосовали</span>
-              </div>
-            <% end %>
+        <% if user_signed_in? && !policy(@user).profile? && false %>
+          <% unless VotesQuery.new.is_votes(current_user, @user.number) %>
+            <div class="vote-btn-container text-center">
+              <span class='btn btn-success disabled'>Вы проголосовали</span>
+            </div>
           <% end %>
+        <% end %>
 
-          <%- if @user_next %>
-            <%== link_to user_path(@user_next, request.query_parameters), class: 'btn btn-default' do %>
-              <span>Следующая</span>
-              <i class="fa fa-chevron-right" aria-hidden="true"></i>
-            <% end %>
-          <% else %>
-            <div></div>
+        <%- if @user_next %>
+          <%== link_to user_path(@user_next, request.query_parameters), class: 'btn btn-default' do %>
+            <span>Следующая</span>
+            <i class="fa fa-chevron-right" aria-hidden="true"></i>
           <% end %>
-        </div>
+        <% else %>
+          <div></div>
+        <% end %>
+      </div>
 
 
+      <% if false %>
         <% if false %>
           <% if user_signed_in? && !policy(@user).profile? %>
             <% if !policy(@user).profile? %>
@@ -116,8 +116,10 @@
                 </span>
           </div>
         <% end %>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
+
+
     <%== render 'users/userinfo' %>
   </div>
 </div>
