загрузка фото, только после заполнения анкеты

--- a/app/views/users/_photos.erb
+++ b/app/views/users/_photos.erb
@@ -102,21 +102,34 @@
   <% end %>
 <% end %>
 
-<% if user_signed_in? && policy(@user).profile? %>
-  <%- if @user.photos.length < 4 %>
-    <div id="oooops" style="display: none; margin: 10px; padding: 10px; border: 2px solid #f60; border-radius: 4px;">
-      Увы, ваш браузер не поддерживает html5 и flash,
-      поэтому смотреть тут нечего, а iframe не даёт всей красоты :]
-    </div>
-
-    <div id="buttons-panel" data-url="<%= members_upload_path %>">
-      <div class="btn btn-success btn-lg b-button js-fileapi-wrapper">
-        <div class="b-button__text">
-          <span class="fa fa-photo"></span>
-          Выбрать фото для загрузки
-        </div>
-        <input name="files" class="b-button__input" type="file" accept="image/*" multiple />
+<%- if @user.email2.present? %>
+  <% if user_signed_in? && policy(@user).profile? %>
+    <%- if @user.photos.length < 4 %>
+      <div id="oooops" style="display: none; margin: 10px; padding: 10px; border: 2px solid #f60; border-radius: 4px;">
+        Увы, ваш браузер не поддерживает html5 и flash,
+        поэтому смотреть тут нечего, а iframe не даёт всей красоты :]
       </div>
-    </div>
+
+      <div id="buttons-panel" data-url="<%= members_upload_path %>">
+        <div class="btn btn-success btn-lg b-button js-fileapi-wrapper">
+          <div class="b-button__text">
+            <span class="fa fa-photo"></span>
+            Выбрать фото для загрузки
+          </div>
+          <input name="files" class="b-button__input" type="file" accept="image/*" multiple />
+        </div>
+      </div>
+    <% end %>
   <% end %>
+<% else %>
+  <div>
+     <div>
+       Что бы загрузить свои фотографии необходимо:
+     </div>
+    <br>
+    <%= link_to edit_user_path(@user), class: 'btn btn-success btn-lg b-button' do%>
+      <i class="fa fa-cog" aria-hidden="true"></i>
+      Заполнить анкету
+    <% end %>
+  </div>
 <% end %>
