--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -126,7 +126,7 @@
 
 <hr>
 <div style="margin: 0 0 64px 0;text-align: center">
-  <%= link_to "Все участницы", votes_path, class: "btn btn-success btn-lg" %>
+  <%= link_to "Назад", :back, class: "btn btn-success btn-lg" %>
 </div>
 
 <%= render partial: 'shared/gen_partner', cached: true %>
