--- a/app/views/shared/_steps.html.erb
+++ b/app/views/shared/_steps.html.erb
@@ -12,8 +12,12 @@
       <div class="step-label">
         Регистрация участниц
       </div>
-      <div class="step-date">
+      <div class="step-date step-date-under">
         с 16 июля  до 30 июля 
+      </div>
+      <div class="step-date">
+        с 16 июля  до
+        <%=l REGISTRATION_END_DATE, format: :short_b %>
       </div>
     </div>
 
@@ -30,15 +34,15 @@
     </div>
 
     <!--<div class="step">-->
-      <!--<div class="step-value">-->
-        <!--3-->
-      <!--</div>-->
-      <!--<div class="step-label">-->
-        <!--Подведение итогов-->
-      <!--</div>-->
-      <!--<div class="step-date">-->
-        <!--6 ноября-->
-      <!--</div>-->
+    <!--<div class="step-value">-->
+    <!--3-->
+    <!--</div>-->
+    <!--<div class="step-label">-->
+    <!--Подведение итогов-->
+    <!--</div>-->
+    <!--<div class="step-date">-->
+    <!--6 ноября-->
+    <!--</div>-->
     <!--</div>-->
 
     <div class="step">
