--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -11,13 +11,15 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
       .header-hero
         / h1.header-title Мисс Туризм Россия 2017!
         - if user_signed_in?
-          - if policy(current_user).contestant?
             h1.header-title= current_user.name
-            = link_to "Моя анкета", user_path(current_user), class: 'btn btn-primary', style: "margin: 0 16px 0 0"
+            - if policy(current_user).female?
+              = link_to "Моя анкета", user_path(current_user), class: 'btn btn-primary', style: "margin: 0 16px 0 0"
+            -else
+              = link_to 'Голосовать', votes_path, class: 'btn btn-primary', style: "margin: 0 16px 0 0"
             = link_to 'Выход', destroy_user_session_path, :method => 'delete', class: 'btn btn-default'
         - else
           h1.header-title Всероссийский конкурс красоты Мисс Туризм!
-          button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" Участвовать
+          button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" Зарегистрироваться
 
 
 #myModal.modal.fade aria-labelledby="myModalLabel" role="dialog" tabindex="-1"
@@ -26,7 +28,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
       .modal-header
         button.close aria-label="Close" data-dismiss="modal" type="button"
           span aria-hidden="true"  &times;
-        h4#myModalLabel.modal-title Для участия авторизуйтесь через
+        h4#myModalLabel.modal-title Для участия или голосования авторизуйтесь через
       .modal-body
         - unless user_signed_in?
           .b-sign-in
