--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -27,14 +27,20 @@ header {
 .header-collapse {
 	height: 480px;
 
+	@media (min-width: 768px) {
+		.header-hero{
+			margin-top: 0;
+		}
+	}
+
 	@media (max-width: 768px) {
-		height: 560px;
+		height: 630px;
 	}
 	@media (max-width: 640px) {
-		height: 500px;
+		height: 620px;
 	}
 	@media (max-width: 480px) {
-		height: 450px;
+		height: 520px;
 	}
 }
 
