доработка коллажа и редизайн ленты участниц

--- a/app/views/users/votes.html.erb
+++ b/app/views/users/votes.html.erb
@@ -56,7 +56,8 @@
 <div class="votes-users">
   <%- @users.each do |user| %>
     <div class="votes-user">
-      <%= render partial: "shared/anketa_mini", locals: {user: user} %>
+      <%#= render partial: "shared/anketa_mini", locals: {user: user} %>
+      <%= render partial: "users_grid/item", locals: {user: user, className: 'votesList'} %>
     </div>
   <% end %>
 </div>
