--- a/app/javascript/packs/_users_grid.scss
+++ b/app/javascript/packs/_users_grid.scss
@@ -1,3 +1,9 @@
+.usersGridTitle {
+	margin: 0;
+	padding: 32px 0;
+	background-color: #fff;
+}
+
 .usersGrid {
 	position: relative;
 	max-width: 1400px;
@@ -104,6 +110,27 @@
 	}
 }
 
+.usersGrid-photoLink{
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	z-index: 1;
+	text-decoration: none;
+	font-size: 0;
+}
+
+.usersGrid-photo.votesList{
+	position: relative;
+	width: 100%;
+	padding-top: 140%;
+
+	.usersGrid-bar {
+		opacity: 1;
+	}
+}
+
 .usersGrid-gallery {
 	display: none !important;
 
@@ -126,6 +153,11 @@
 
 .usersGrid-photo {
 	&:hover {
+		.usersGrid-number{
+			opacity: 1;
+			transition: opacity 300ms ease;
+			will-change: opacity;
+		}
 		.usersGrid-bar {
 			opacity: 1;
 			transition: opacity 300ms ease;
@@ -134,18 +166,40 @@
 	}
 }
 
+.usersGrid-number {
+	position: absolute;
+	left: 20px;
+	top: 10px;
+	font-family: 'Poiret One', cursive;
+	font-size: 72px;
+	line-height: 84px;
+	color: #ffffff;
+	opacity: 0;
+}
+
 .usersGrid-bar {
 	position: absolute;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	z-index: 2;
+
+	display: flex;
+
 	opacity: 0;
-	padding: 16px 8px;
+
 	background-color: #a69e7b;
 	line-height: 1.35;
 	color: #fff;
 	text-align: center;
+}
+
+.usersGrid-userInfo {
+	display: block;
+	flex-grow: 50;
+	padding: 16px 8px;
+	color: #fff !important;
+	text-decoration: none !important;
 }
 
 .usersGrid-bar-title {
@@ -161,4 +215,33 @@
 .usersGrid-action {
 	margin: 32px 0;
 	text-align: center;
+}
+
+.usersGrid-userVotes {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	flex-grow: 1;
+	width: 100px;
+	background-color: #2c4493;
+}
+
+.usersGrid-voteAction{
+	margin: 0 0 8px;
+}
+
+.usersGrid-countVotes {
+	font-family: 'PT Sans';
+	font-size: 14px;
+	text-align: center;
+	color: #ffffff;
+}
+
+.usersGrid-voteActionBtn{
+	display: inline-block;
+	padding: 0;
+	margin: 0;
+	outline: none;
+	border: none;
+	background: none;
 }
