--- a/app/javascript/packs/_votes.scss
+++ b/app/javascript/packs/_votes.scss
@@ -117,7 +117,7 @@
 
 .votes-user {
 	width: calc((100% / 3) - 20px);
-	margin: 0 10px;
+	margin: 10px;
 
 	@media (max-width: 992px) {
 		width: calc((100% / 2) - 20px);
