форма заявки на участие в финале

--- a/app/views/orders/_package_1.slim
+++ b/app/views/orders/_package_1.slim
@@ -1,9 +1,6 @@
-h4 В пакет входит:
-ul
-  li Проживание в 1/2 DBL в отеле Aldemar Knossos Royal 5* на базе питания "Все включено" 17/10-20/10
-  li Медицинское страхование для выезжающих зарубеж от страховой компании ERV на период 17 / 10 20 / 10
-  li Участие во всех организованных мероприятиях Мисс Туризм 2018
+h2.page-header.order-subtitle-2 Стандарт
 
+== render 'orders/package_desc_1'
 
 h4 Зарегистрироваться:
 = simple_form_for @order do |f|
