--- a/app/views/orders/_package_2.slim
+++ b/app/views/orders/_package_2.slim
@@ -1,14 +1,6 @@
-p цена <b>31990 рублей</b> действительна при подачи заявки до 20 августа
-p <b>36 990 рублей</b> при подачи заявки 21 августа по 20 сентября
-p с 21 сентября <b>39 990 рублей</b>
+h2.page-header.order-subtitle-2 Премиум
 
-h4 В пакет входит:
-ul
-  li Авиаперелет Москва-Ираклион-Москва 17/10-20/10
-  li Групповой трансфер аэропорт - отель - аэропорт
-  li Проживание в 1/2 DBL в отеле Aldemar Knossos Royal 5* на базе питания "Все включено" 17/10-20/10
-  li Медицинское страхование для выезжающих зарубеж от страховой компании ERV на период 17/10-20/10
-  li Участие во всех организованных мероприятиях Мисс Туризм 2018
+==render 'orders/package_desc_2'
 
 h4 Зарегистрироваться:
 = simple_form_for @order do |f|
