--- a/app/views/orders/_user_form.slim
+++ b/app/views/orders/_user_form.slim
@@ -50,3 +50,5 @@
     = link_to ' обработку персональных данных', personal_information_path, target: '_blank'
 .order-formAction
     = f.button :submit, 'Отправить заявку', class: 'btn btn-success btn-lg'
+
+.order-formAction-message Обращаем ваше внимание, что отправка заявки не является автоматическим подтверждением участия. Ответ по вашему участию будет выслан вам на электронный ящик.
