--- a/app/javascript/packs/_orders.scss
+++ b/app/javascript/packs/_orders.scss
@@ -34,3 +34,104 @@
 	margin: 16px 0;
 	text-align: center;
 }
+
+.order-subtitle{
+	margin: 64px 0;
+	text-align: center;
+}
+
+.order-subtitle-2{
+	margin: 32px 0;
+	text-align: center;
+}
+
+.packages {
+	padding: 0 0 64px;
+	display: flex;
+	justify-content: center;
+
+	@media (max-width: 630px) {
+		flex-direction: column;
+		align-items: center;
+	}
+}
+
+.package {
+	position: relative;
+	height: 180px;
+	width: 300px;
+	margin:0 32px;
+	background-color: #f5eade;
+
+	@media (max-width: 630px) {
+		margin:0 0 64px;
+
+		&:last-child{
+			margin-bottom: 0;
+		}
+	}
+
+	&:before {
+		background: #fff;
+		border-radius: 50%;
+		box-shadow: 300px 0 0 0 #fff,
+		0 180px 0 0 #fff,
+		300px 180px 0 0 #fff,
+		0 40px 0 -20px #fff,
+		0 60px 0 -20px #fff,
+		0 80px 0 -20px #fff,
+		0 100px 0 -20px #fff,
+		0 120px 0 -20px #fff,
+		0 140px 0 -20px #fff,
+		300px 40px 0 -20px #fff,
+		300px 60px 0 -20px #fff,
+		300px 80px 0 -20px #fff,
+		300px 100px 0 -20px #fff,
+		300px 120px 0 -20px #fff,
+		300px 140px 0 -20px #fff;
+		content: "";
+		display: block;
+		height: 50px;
+		left: -25px;
+		position: absolute;
+		top: -25px;
+		width: 50px;
+	}
+}
+
+.package-wrapper {
+	text-align: center;
+	padding: 16px 32px;
+	line-height: 1.3;
+	font-family: 'Lato';
+	font-weight: 500;
+	font-size: 16px;
+
+	&:before,
+	&:after {
+		background: #333;
+		color: #aaa;
+		display: inline-block;
+		font-size: 16px;
+		left: 50%;
+		padding: 0 10px;
+		position: absolute;
+	}
+}
+
+.package-title {
+	margin: 0;
+	font-size: 20px;
+	font-weight: 800;
+}
+.package-desc{
+	margin: 0 0 14px;
+}
+.package-price{
+	margin: 0 0 14px;
+	font-size: 20px;
+	font-weight: 800;
+}
+.package-more{
+	margin: 0 0 16px;
+}
