--- a/app/views/orders/_user_form.slim
+++ b/app/views/orders/_user_form.slim
@@ -10,7 +10,7 @@
     = f.input :name_zagran, label: 'Имя (как в загран паспорте):'
 .row
   .col-md-12
-    = f.input :birth_date, label: 'Дата рождения', as: :date, html5: true
+    = f.input :birth_date, label: 'Дата рождения:', as: :date, html5: true
 .row
   .col-md-6.col-sm-6
     = f.input :passport_number, label: 'Номер загран паспорта:'
