форма заявки на участие в финале

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -48,6 +48,13 @@
       border-collapse: collapse;
       border: 1px solid grey;
     }
+    .mailTable td{
+      padding: 4px 16px;
+      border: 1px solid grey;
+    }
+    .mailTable td:first-child{
+      text-align: right;
+    }
   </style>
 </head>
 
