добавил фото для шаринга на странице регистрации на финал

--- a/app/views/orders/index.slim
+++ b/app/views/orders/index.slim
@@ -1,7 +1,11 @@
+- title = 'Регистрация на финал конкурса «Мисс Туризм» 2018'
+- desc = 'Приглашаем директоров и руководителей туристических компаний на финал конкурса Мисс Туризм 2018, который пройдёт с 17 по 20 октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5!'
 - content_for :title do
-  |Регистрация на финал конкурса «Мисс Туризм» 2018
+  = title
 - content_for :description do
-  |Приглашаем директоров и руководителей туристических компаний на финал конкурса Мисс Туризм 2018, который пройдёт с 17 по 20 октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5!
+  = desc
+
+= render partial: "shared/meta_og", locals: {title: title, desc: desc, photo: nil}
 
 h1.page-header Регистрация на финал
 .order-lead Приглашаем директоров и руководителей туристических компаний на финал конкурса Мисс Туризм 2018, который пройдёт с 17 по 20 октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5!
